00-setup-demo/capacitor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor-ingress
  namespace: flux-system
spec:
  rules:
  - host: capacitor.ocm.dev
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: capacitor
              port:
                number: 9000
  tls:
  - hosts:
    - capacitor.ocm.dev
    secretName: mkcert-tls
